# RAG-Anything

RAG-CL/: ENTITY_SAVING_SOLUTION.md  README.md  README_ENTITY_EXTRACTION.md  demo_ragcl.py  pyproject.toml  quick_test.py  simulate_parsing.py
RAG-CL/examples/: basic_usage.py  entity_extraction_summary.py  entity_extraction_test.py  final_demo.py  fix_entity_saving.py  parser_comparison.py  quick_entity_test.py  quick_entity_test_fixed.py  quick_test.py  save_entities_example.py  show_entity_storage.py  show_results.py  simple_entity_demo.py
RAG-CL/examples/quick_parse_output/p5-14/auto/: p5-14.md  p5-14_content_list.json  p5-14_middle.json  p5-14_model.json
RAG-CL/extract_entities/: p5-14_complete_results.json  p5-14_entities.json
RAG-CL/quick_parse_output/: p5-14_parsed.json
RAG-CL/quick_parse_output/p5-14/auto/: p5-14.md  p5-14_content_list.json  p5-14_middle.json  p5-14_model.json
RAG-CL/raganything_integrated_output/: integrated_raganything_entities.json
RAG-CL/ragcl/: __init__.py  config.py  entity_extractor.py  lightrag_entity_extractor.py  parser.py  raganything_entity_extractor.py  ragcl.py
RAG-CL/simulation_output/: simulated_results.json  simulated_results.md
